# tic-tac-toe

./: CMakeLists.txt  README.md  main.cpp
src/: Board.cpp  Board.h  Coordinate.cpp  Coordinate.h  Game.cpp  Game.h  Placeholder.cpp  Placeholder.h  Player.cpp  Player.h
test/: BoardTest.cpp  CMakeLists.txt  Coordinate.cpp  CoordinateTest.cpp  GameTest.cpp
